--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
+    "dev:web": "next dev --turbopack",
+    "dev:inngest": "inngest-cli dev",
+    "dev": "mprocs",
+    "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint"
   },
@@ -51,6 +53,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "embla-carousel-react": "^8.6.0",
+    "inngest": "^3.44.3",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.548.0",
     "next": "16.0.0",
@@ -74,6 +77,8 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
+    "inngest-cli": "^1.12.1",
+    "mprocs": "^0.7.3",
     "prisma": "^6.18.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
