--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^2.0.23",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.18.0",
     "@prisma/extension-accelerate": "^2.0.2",
@@ -44,6 +45,7 @@
     "@trpc/client": "^11.6.0",
     "@trpc/server": "^11.6.0",
     "@trpc/tanstack-react-query": "^11.6.0",
+    "ai": "^5.0.79",
     "babel-plugin-react-compiler": "^1.0.0",
     "better-auth": "^1.3.31",
     "class-variance-authority": "^0.7.1",
