--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react": "19.2.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.2.0",
+    "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.65.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^2.15.4",
@@ -85,6 +86,7 @@
     "inngest-cli": "^1.12.1",
     "mprocs": "^0.7.3",
     "prisma": "^6.18.0",
+    "random-word-slugs": "^0.1.7",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
